# mikrotik-gps-venus

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  mikrotik_gps_venus.py  pyproject.toml  starfixvenus.py
scripts/: install-helpers.sh  logs  restart  start  status  stop
